@@ -3,6 +3,10 @@ package ti4;
 import java.text.DateFormat;
 import java.text.ParseException;
 import java.text.SimpleDateFormat;
+import java.time.LocalDate;
+import java.time.ZoneId;
+import java.time.format.DateTimeFormatter;
+import java.time.format.DateTimeParseException;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Date;
@@ -16,11 +20,12 @@ import java.util.Set;
 import java.util.function.Function;
 
 import org.apache.commons.lang3.StringUtils;
-
 import ti4.draft.DraftBag;
 import ti4.draft.DraftItem;
-import ti4.generator.Mapper;
+import ti4.image.Mapper;
+import ti4.helpers.ColorChangeHelper;
 import ti4.helpers.Constants;
+import ti4.helpers.Emojis;
 import ti4.map.Game;
 import ti4.map.GameManager;
 import ti4.map.GameSaveLoadManager;
@@ -29,6 +34,7 @@ import ti4.map.Player;
 import ti4.map.Tile;
 import ti4.map.UnitHolder;
 import ti4.message.BotLogger;
+import ti4.message.MessageHelper;
 import ti4.model.FactionModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
@@ -72,18 +78,38 @@ public class DataMigrationManager {
             runMigration("migrateFrankenItems_111223", DataMigrationManager::migrateFrankenItems_111223);
             runMigration("resetMinorFactionCommanders_130624", DataMigrationManager::resetMinorFactionCommanders_130624);
             runMigration("removeBadCVToken_290624", DataMigrationManager::removeBadCVToken_290624);
+            runMigration("migrateCreationDate_311024", DataMigrationManager::migrateCreationDate_311024);
+            runMigration("noMoreRiftset_311024", DataMigrationManager::noMoreRiftset_311024);
         } catch (Exception e) {
             BotLogger.log("Issue running migrations:", e);
         }
     }
 
     /// MIGRATION: Example Migration method
-    /// <Description of how data is changing, and optionally what code fix it
-    /// relates to>
-    public static Boolean migrateExampleMigration_241223(Game game) {
+    /// <Description of how data is changing, and optionally what code fix it relates to>
+    public static Boolean migrateExampleMigration_241223(Game game) { // method_DDMMYY where DD = Day, MM = Month, YY = Year
         // Do your migration here for each non-finshed map
-        // This will run once, and the map will log that it has had your migration run
-        // so it doesnt re-run next time.
+        // This will run once, and the map will log that it has had your migration run so it doesnt re-run next time.
+        return false;
+    }
+
+    /// MIGRATION: Add game.startedDate (long)
+    public static Boolean migrateCreationDate_311024(Game game) {
+        if (game.getStartedDate() < 1) {
+            LocalDate localDate;
+            try {
+                localDate = LocalDate.parse(game.getCreationDate(), DateTimeFormatter.ofPattern("yyyy.MM.dd"));
+            } catch (DateTimeParseException e) {
+                localDate = LocalDate.now();
+            }
+            int gameNameHash = Math.abs(game.getName().hashCode());
+            int hours = gameNameHash % 24;
+            int minutes = gameNameHash % 60;
+            int seconds = Math.abs(game.getCustomName().hashCode()) % 60;
+            var localDateTime = localDate.atTime(hours, minutes, seconds);
+            game.setStartedDate(localDateTime.atZone(ZoneId.of("UTC")).toInstant().toEpochMilli());
+            return true;
+        }
         return false;
     }
 
@@ -568,7 +594,7 @@ public class DataMigrationManager {
         game.setStoredValue("fakeCommanders", "");
         for (Tile t : game.getTileMap().values()) {
             if (t.isHomeSystem()) {
-                String planet = t.getPlanetUnitHolders().isEmpty() ? null : t.getPlanetUnitHolders().get(0).getName();
+                String planet = t.getPlanetUnitHolders().isEmpty() ? null : t.getPlanetUnitHolders().getFirst().getName();
                 String faction = planet == null ? null : Mapper.getPlanet(planet).getFactionHomeworld();
                 if (faction != null && game.getPlayerFromColorOrFaction(faction) == null) {
                     anyFound = true;
@@ -589,6 +615,19 @@ public class DataMigrationManager {
         return replaceTokens(game, tokens);
     }
 
+    public static boolean noMoreRiftset_311024(Game game) {
+        Player rift = game.getPlayerFromColorOrFaction("ero");
+        if (rift == null) return false;
+        if (rift.getUserID().equals(Constants.eronousId)) return false;
+
+        String newColor = rift.getNextAvailableColorIgnoreCurrent();
+        if (game.getPlayerFromColorOrFaction(newColor) != null) return false;
+        String oldColor = rift.getColor();
+        MessageHelper.sendMessageToChannel(game.getTableTalkChannel(), rift.getRepresentation(false, false) + " has had their color changed to " + Emojis.getColorEmojiWithName(newColor));
+        ColorChangeHelper.changePlayerColor(game, rift, oldColor, newColor);
+        return true;
+    }
+
     private static void runMigration(String migrationName, Function<Game, Boolean> migrationMethod) {
         String migrationDateString = migrationName.substring(migrationName.indexOf("_") + 1);
         DateFormat format = new SimpleDateFormat("ddMMyy");
@@ -601,7 +640,7 @@ public class DataMigrationManager {
                 migrationDateString), e);
         }
         List<String> migrationsAppliedThisTime = new ArrayList<>();
-        Map<String, Game> loadedMaps = GameManager.getInstance().getGameNameToGame();
+        Map<String, Game> loadedMaps = GameManager.getGameNameToGame();
         for (Game game : loadedMaps.values()) {
             DateFormat mapCreatedOnFormat = new SimpleDateFormat("yyyy.MM.dd");
             Date mapCreatedOn = null;
@@ -623,11 +662,11 @@ public class DataMigrationManager {
 
                 if (changesMade) {
                     migrationsAppliedThisTime.add(game.getName());
-                    GameSaveLoadManager.saveMap(game, "Data Migration - " + migrationName);
+                    GameSaveLoadManager.saveGame(game, "Data Migration - " + migrationName);
                 }
             }
         }
-        if (migrationsAppliedThisTime.size() > 0) {
+        if (!migrationsAppliedThisTime.isEmpty()) {
             String mapNames = String.join(", ", migrationsAppliedThisTime);
             BotLogger.log(String.format("Migration %s run on following maps successfully: \n%s", migrationName, mapNames));
         }
@@ -651,7 +690,7 @@ public class DataMigrationManager {
         for (int i = 0; i < bag.Contents.size(); i++) {
             DraftItem item = bag.Contents.get(i);
             if ("keleres".equals(item.ItemId)) {
-                var newItem = DraftItem.Generate(item.ItemCategory, "keleresa");
+                var newItem = DraftItem.generate(item.ItemCategory, "keleresa");
                 swapBagItem(bag, i, newItem);
                 item = newItem;
             }
@@ -660,41 +699,41 @@ public class DataMigrationManager {
                     var faction = Mapper.getFaction(item.ItemId);
                     var units = faction.getUnits();
                     units.removeIf((String unit) -> !"mech".equals(Mapper.getUnit(unit).getBaseType()));
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.MECH, units.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.MECH, units.getFirst()));
                 }
             } else if (item.ItemCategory == DraftItem.Category.FLAGSHIP) {
                 if (Mapper.getUnit(item.ItemId) == null) {
                     var faction = Mapper.getFaction(item.ItemId);
                     var units = faction.getUnits();
                     units.removeIf((String unit) -> !"flagship".equals(Mapper.getUnit(unit).getBaseType()));
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.FLAGSHIP, units.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.FLAGSHIP, units.getFirst()));
                 }
             } else if (item.ItemCategory == DraftItem.Category.AGENT) {
                 if (Mapper.getLeader(item.ItemId) == null) {
                     var faction = Mapper.getFaction(item.ItemId);
                     List<String> agents = faction.getLeaders();
                     agents.removeIf((String leader) -> !"agent".equals(Mapper.getLeader(leader).getType()));
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.AGENT, agents.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.AGENT, agents.getFirst()));
                 }
             } else if (item.ItemCategory == DraftItem.Category.COMMANDER) {
                 if (Mapper.getLeader(item.ItemId) == null) {
                     var faction = Mapper.getFaction(item.ItemId);
                     List<String> agents = faction.getLeaders();
                     agents.removeIf((String leader) -> !"commander".equals(Mapper.getLeader(leader).getType()));
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.COMMANDER, agents.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.COMMANDER, agents.getFirst()));
                 }
             } else if (item.ItemCategory == DraftItem.Category.HERO) {
                 if (Mapper.getLeader(item.ItemId) == null) {
                     var faction = Mapper.getFaction(item.ItemId);
                     List<String> agents = faction.getLeaders();
                     agents.removeIf((String leader) -> !"hero".equals(Mapper.getLeader(leader).getType()));
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.HERO, agents.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.HERO, agents.getFirst()));
                 }
             } else if (item.ItemCategory == DraftItem.Category.PN) {
                 if (Mapper.getPromissoryNote(item.ItemId) == null) {
                     var faction = Mapper.getFaction(item.ItemId);
                     List<String> pns = faction.getPromissoryNotes();
-                    swapBagItem(bag, i, DraftItem.Generate(DraftItem.Category.PN, pns.get(0)));
+                    swapBagItem(bag, i, DraftItem.generate(DraftItem.Category.PN, pns.getFirst()));
                 }
             }
         }
@@ -723,6 +762,7 @@ public class DataMigrationManager {
         return found;
     }
 
+    @SuppressWarnings("unused")
     private static boolean replaceStage1s(Game game, List<String> decksToCheck, Map<String, String> replacements) {
         if (!decksToCheck.contains(game.getStage1PublicDeckID())) {
             return false;
@@ -739,6 +779,7 @@ public class DataMigrationManager {
         return mapNeededMigrating;
     }
 
+    @SuppressWarnings("unused")
     private static boolean replaceActionCards(Game game, List<String> decksToCheck, Map<String, String> replacements) {
         if (!decksToCheck.contains(game.getAcDeckID())) {
             return false;
@@ -758,6 +799,7 @@ public class DataMigrationManager {
         return mapNeededMigrating;
     }
 
+    @SuppressWarnings("unused")
     private static boolean replaceAgendaCards(Game game, List<String> decksToCheck, Map<String, String> replacements) {
         if (!decksToCheck.contains(game.getAgendaDeckID())) {
             return false;
