@@ -3,40 +3,38 @@ package ti4.autocomplete;
 import java.io.File;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.Date;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.Objects;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
-
-import org.apache.commons.lang3.StringUtils;
 
 import net.dv8tion.jda.api.entities.Guild;
 import net.dv8tion.jda.api.entities.channel.concrete.Category;
 import net.dv8tion.jda.api.events.interaction.command.CommandAutoCompleteInteractionEvent;
 import net.dv8tion.jda.api.interactions.commands.Command;
 import net.dv8tion.jda.api.interactions.commands.OptionMapping;
+import org.apache.commons.lang3.StringUtils;
 import ti4.AsyncTI4DiscordBot;
-import ti4.MessageListener;
-import ti4.commands.franken.StartFrankenDraft.FrankenDraftMode;
 import ti4.commands.game.Undo;
 import ti4.commands.map.Preset;
-import ti4.commands.milty.ForcePick;
-import ti4.commands.player.ChangeUnitDecal;
-import ti4.commands.statistics.GameStats.GameStatistics;
-import ti4.commands.statistics.PlayerStats;
-import ti4.commands.uncategorized.ServerPromote;
-import ti4.generator.Mapper;
-import ti4.generator.TileHelper;
+import ti4.commands2.CommandHelper;
+import ti4.commands2.statistics.GameStatTypes;
+import ti4.commands2.statistics.PlayerStatTypes;
+import ti4.commands2.uncategorized.ServerPromote;
+import ti4.image.Mapper;
+import ti4.image.TileHelper;
 import ti4.helpers.Constants;
 import ti4.helpers.FoWHelper;
 import ti4.helpers.GlobalSettings;
 import ti4.helpers.Helper;
 import ti4.helpers.Storage;
+import ti4.listeners.SlashCommandListener;
 import ti4.map.Game;
 import ti4.map.GameManager;
 import ti4.map.Player;
@@ -44,10 +42,11 @@ import ti4.message.BotLogger;
 import ti4.model.AbilityModel;
 import ti4.model.BorderAnomalyModel;
 import ti4.model.DeckModel;
+import ti4.model.EmbeddableModel;
 import ti4.model.ExploreModel;
 import ti4.model.FactionModel;
-import ti4.model.LeaderModel;
 import ti4.model.MapTemplateModel;
+import ti4.model.ModelInterface;
 import ti4.model.PlanetTypeModel;
 import ti4.model.PromissoryNoteModel;
 import ti4.model.PublicObjectiveModel;
@@ -60,34 +59,27 @@ import ti4.model.TechSpecialtyModel;
 import ti4.model.TechnologyModel;
 import ti4.model.UnitModel;
 import ti4.model.WormholeModel;
+import ti4.service.UnitDecalService;
+import ti4.service.franken.FrankenDraftMode;
 
 public class AutoCompleteProvider {
 
     public static void autoCompleteListener(CommandAutoCompleteInteractionEvent event) {
-        // List<OptionMapping> allOptions = event.getOptions();
-        //String fullCommandName = event.getFullCommandName();
         String commandName = event.getName();
-        //String subCommandGroupName = event.getSubcommandGroup();
         String subCommandName = event.getSubcommandName();
         String optionName = event.getFocusedOption().getName();
 
-        //boolean showAllChoicesInGame = false;
-        //OptionMapping factionOrColorOption = event.getOption(Constants.FACTION_COLOR);
-        //if (factionOrColorOption != null) showAllChoicesInGame = true;
-
-        String userID = event.getUser().getId();
-        MessageListener.setActiveGame(event.getMessageChannel(), userID, event.getName(), event.getSubcommandName());
-        Game game = GameManager.getInstance().getUserActiveGame(userID);
+        String userId = event.getUser().getId();
+        SlashCommandListener.setActiveGame(event.getMessageChannel(), userId, event.getName(), event.getSubcommandName());
+        Game game = GameManager.getUserActiveGame(userId);
         Player player = null;
         if (game != null) {
-            player = game.getPlayer(userID);
-            player = Helper.getGamePlayer(game, player, event, null);
+            player = CommandHelper.getPlayerFromGame(game, event.getMember(), event.getUser().getId());
         }
 
         // VERY SPECIFIC HANDLING OF OPTIONS
         switch (commandName) {
             case Constants.DEVELOPER -> resolveDeveloperCommandAutoComplete(event, subCommandName, optionName);
-            case Constants.DS_COMMAND -> resolveDiscordantStarsCommandAutoComplete(event, subCommandName, optionName);
             case Constants.SEARCH -> resolveSearchCommandAutoComplete(event, subCommandName, optionName);
             case Constants.CARDS_AC -> resolveActionCardAutoComplete(event, subCommandName, optionName, game);
             case Constants.FRANKEN -> resolveFrankenAutoComplete(event, subCommandName, optionName, game);
@@ -110,7 +102,7 @@ public class AutoCompleteProvider {
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case Constants.FACTION -> {
+            case Constants.FACTION, Constants.FACTION2, Constants.FACTION3, Constants.FACTION4, Constants.FACTION5, Constants.FACTION6 -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 List<FactionModel> factions = Mapper.getFactions();
                 List<Command.Choice> options;
@@ -121,7 +113,7 @@ public class AutoCompleteProvider {
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case Constants.FACTION_COLOR, Constants.FACTION_COLOR_1, Constants.FACTION_COLOR_2 -> {
+            case Constants.FACTION_COLOR, Constants.TARGET_FACTION_OR_COLOR -> {
                 if (game == null) {
                     event.replyChoiceStrings("No game found in this channel").queue();
                     break;
@@ -155,6 +147,51 @@ public class AutoCompleteProvider {
                     event.replyChoices(options).queue();
                 }
             }
+            case Constants.HUE -> {
+                String enteredValue = Objects.toString(event.getFocusedOption().getValue(), "").toLowerCase();
+                Map<String, String> values = new HashMap<>() {
+                    {
+                        put("RED", "Reds");
+                        put("GRAY", "Grays");
+                        put("GRAY", "Greys");
+                        put("GRAY", "Blacks");
+                        put("ORANGE", "Oranges");
+                        put("ORANGE", "Browns");
+                        put("YELLOW", "Yellows");
+                        put("GREEN", "Greens");
+                        put("BLUE", "Blues");
+                        put("PURPLE", "Purples");
+                        put("PINK", "Pinks");
+                        put("ALL", "ALL COLOURS");
+                    }
+                };
+                List<Command.Choice> options = values.entrySet().stream()
+                    .filter(entry -> entry.getValue().toLowerCase().contains(enteredValue))
+                    .limit(25)
+                    .map(entry -> new Command.Choice(entry.getValue(), entry.getKey()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
+            case Constants.DECAL_HUE -> {
+                String enteredValue = Objects.toString(event.getFocusedOption().getValue(), "").toLowerCase();
+                Map<String, String> values = new HashMap<>() {
+                    {
+                        put("Pattern", "Pattern");
+                        put("Icon", "Icon");
+                        put("Symbol", "Symbol");
+                        put("Texture", "Texture");
+                        put("Line", "Line");
+                        put("Other", "Other");
+                        put("ALL", "ALL DECALS");
+                    }
+                };
+                List<Command.Choice> options = values.entrySet().stream()
+                    .filter(entry -> entry.getValue().toLowerCase().contains(enteredValue))
+                    .limit(25)
+                    .map(entry -> new Command.Choice(entry.getValue(), entry.getKey()))
+                    .collect(Collectors.toList());
+                event.replyChoices(options).queue();
+            }
             case Constants.CC_USE -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 List<String> values = Arrays.asList("t/tactics", "r/retreat/reinforcements", "no");
@@ -166,9 +203,17 @@ public class AutoCompleteProvider {
                 event.replyChoices(options).queue();
             }
             case Constants.TOKEN -> {
-                String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Mapper.getTokens().stream()
-                    .filter(token -> token.contains(enteredValue))
+                List<String> tokenNames = Mapper.getTokens().stream()
+                    .map(str -> {
+                        if (Mapper.getAttachmentInfo(str) != null) {
+                            return Mapper.getAttachmentInfo(str).getAutoCompleteName();
+                        }
+                        return str;
+                    })
+                    .toList();
+                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
+                List<Command.Choice> options = tokenNames.stream()
+                    .filter(token -> token.toLowerCase().contains(enteredValue))
                     .limit(25)
                     .map(token -> new Command.Choice(token, token))
                     .collect(Collectors.toList());
@@ -176,7 +221,10 @@ public class AutoCompleteProvider {
             }
             case Constants.DISPLAY_TYPE -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = Stream.of("all", "map", "stats", "split", "none")
+                List<Command.Choice> options = Stream.of("all", "map", "stats", "split", "landscape",
+                    "wormholes", "anomalies", "legendaries", "empties", "aetherstream", "space_cannon_offense",
+                    "traits", "technology_specialties", "attachments", "shipless", "googly",
+                    "none")
                     .filter(value -> value.contains(enteredValue))
                     .limit(25)
                     .map(value -> new Command.Choice(value, value))
@@ -189,11 +237,11 @@ public class AutoCompleteProvider {
 
                 List<String> tableRelics = new ArrayList<>();
                 if (game != null) {
-                    for (Player player_ : game.getPlayers().values()) {
-                        List<String> playerRelics = player_.getRelics();
-                        tableRelics.addAll(playerRelics);
-                    }
-                    List<String> relicDeck = game.getAllRelics();
+                    // for (Player player_ : game.getPlayers().values()) {
+                    //     List<String> playerRelics = player_.getRelics();
+                    //     tableRelics.addAll(playerRelics);
+                    // }
+                    List<String> relicDeck = Mapper.getDecks().get(game.getRelicDeckID()).getNewShuffledDeck();
                     tableRelics.addAll(relicDeck);
                     Collections.shuffle(tableRelics);
                 }
@@ -239,31 +287,33 @@ public class AutoCompleteProvider {
             }
             case Constants.AGENDA_ID -> {
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                switch (subCommandName) {
-                    case Constants.REVEAL_SPECIFIC -> {
-                        List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
-                            .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
-                            .limit(25)
-                            .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
-                            .collect(Collectors.toList());
-                        event.replyChoices(options).queue();
-                    }
-                    case Constants.DISCARD_SPECIFIC_AGENDA -> {
-                        List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
-                            .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
-                            .limit(25)
-                            .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
-                            .collect(Collectors.toList());
-                        event.replyChoices(options).queue();
-                    }
-                    default -> {
-                        Map<String, String> agendas = Mapper.getAgendaJustNames(game);
-                        List<Command.Choice> options = agendas.entrySet().stream()
-                            .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
-                            .limit(25)
-                            .map(value -> new Command.Choice(value.getValue(), value.getKey()))
-                            .collect(Collectors.toList());
-                        event.replyChoices(options).queue();
+                if (subCommandName != null) {
+                    switch (subCommandName) {
+                        case Constants.REVEAL_SPECIFIC -> {
+                            List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
+                                .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
+                                .limit(25)
+                                .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
+                                .collect(Collectors.toList());
+                            event.replyChoices(options).queue();
+                        }
+                        case Constants.DISCARD_SPECIFIC_AGENDA -> {
+                            List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
+                                .filter(value -> value.getValue().getName().toLowerCase().contains(enteredValue) || value.getValue().getAlias().toLowerCase().contains(enteredValue))
+                                .limit(25)
+                                .map(value -> new Command.Choice(value.getValue().getName() + " (" + value.getValue().getSource() + ")", value.getKey()))
+                                .collect(Collectors.toList());
+                            event.replyChoices(options).queue();
+                        }
+                        default -> {
+                            Map<String, String> agendas = Mapper.getAgendaJustNames(game);
+                            List<Command.Choice> options = agendas.entrySet().stream()
+                                .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
+                                .limit(25)
+                                .map(value -> new Command.Choice(value.getValue(), value.getKey()))
+                                .collect(Collectors.toList());
+                            event.replyChoices(options).queue();
+                        }
                     }
                 }
             }
@@ -334,7 +384,7 @@ public class AutoCompleteProvider {
                 event.replyChoices(options).queue();
             }
             case Constants.PLANET, Constants.PLANET2, Constants.PLANET3, Constants.PLANET4, Constants.PLANET5, Constants.PLANET6 -> {
-                MessageListener.setActiveGame(event.getMessageChannel(), event.getUser().getId(), event.getName(), event.getSubcommandName());
+                SlashCommandListener.setActiveGame(event.getMessageChannel(), event.getUser().getId(), event.getName(), event.getSubcommandName());
                 String enteredValue = event.getFocusedOption().getValue().toLowerCase();
                 Set<String> planetIDs;
                 Map<String, String> planets = Mapper.getPlanetRepresentations();
@@ -348,7 +398,7 @@ public class AutoCompleteProvider {
                             value.getValue() + " (" + Helper.getPlanetResources(value.getKey(), game) + "/" + Helper.getPlanetInfluence(value.getKey(), game) + ")", value.getKey()))
                         .collect(Collectors.toList());
                     event.replyChoices(options).queue();
-                } else if (game != null && game.isFowMode()) {
+                } else if (game != null) {
                     List<Command.Choice> options = planets.entrySet().stream()
                         .filter(value -> value.getValue().toLowerCase().contains(enteredValue))
                         .limit(25)
@@ -370,7 +420,7 @@ public class AutoCompleteProvider {
                 String enteredValue = event.getFocusedOption().getValue();
                 List<Command.Choice> options = Mapper.getDecals().stream()
                     .filter(value -> value.contains(enteredValue) || Mapper.getDecalName(value).toLowerCase().contains(enteredValue))
-                    .filter(decalID -> ChangeUnitDecal.userMayUseDecal(userID, decalID))
+                    .filter(decalID -> UnitDecalService.userMayUseDecal(userId, decalID))
                     .limit(25)
                     .map(value -> new Command.Choice(Mapper.getDecalName(value), value))
                     .collect(Collectors.toList());
@@ -379,7 +429,7 @@ public class AutoCompleteProvider {
             case Constants.TTPG_FILE_NAME -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 File exportDirectory = Storage.getTTPGExportDirectory();
-                String dir = exportDirectory == null ? "/" : exportDirectory.getPath();
+                String dir = exportDirectory.getPath();
 
                 Set<String> fileSet = Stream.of(new File(dir).listFiles())
                     .filter(file -> !file.isDirectory())
@@ -474,11 +524,11 @@ public class AutoCompleteProvider {
 
                 Map<String, AbilityModel> abilities = new HashMap<>();
                 try {
-                    if (player != null && event.getSubcommandName().equals(Constants.ABILITY_REMOVE)) {
+                    if (player != null && subCommandName != null && subCommandName.equals(Constants.ABILITY_REMOVE)) {
                         for (String abilityID : player.getAbilities()) {
                             abilities.put(abilityID, Mapper.getAbilities().get(abilityID));
                         }
-                    } else if (player != null && event.getSubcommandName().equals(Constants.ABILITY_ADD)) {
+                    } else if (player != null && subCommandName != null && subCommandName.equals(Constants.ABILITY_ADD)) {
                         abilities = Mapper.getAbilities();
                         for (String abilityID : player.getAbilities()) {
                             abilities.remove(abilityID);
@@ -520,7 +570,7 @@ public class AutoCompleteProvider {
                 if (game.isFowMode()) {
                     event.replyChoiceStrings("Game is Fog of War mode - you can't see what you are undoing.").queue();
                 }
-                long datetime = new Date().getTime();
+                long datetime = System.currentTimeMillis();
                 List<Command.Choice> options = Undo.getAllUndoSavedGames(game).entrySet().stream()
                     .sorted(Map.Entry.<String, Game>comparingByValue(Comparator.comparing(Game::getLastModifiedDate)).reversed())
                     .limit(25)
@@ -576,91 +626,59 @@ public class AutoCompleteProvider {
                 event.replyChoices(options).queue();
             }
             case Constants.SO_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> secretDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.SECRET_OBJECTIVE))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, secretDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.STAGE_1_PUBLIC_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> public1Decks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.STAGE_1_PUBLIC))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, public1Decks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.STAGE_2_PUBLIC_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> public2Decks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.STAGE_2_PUBLIC))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, public2Decks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.RELIC_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> relicDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.RELIC))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, relicDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.AGENDA_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> agendaDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.AGENDA))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, agendaDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.EVENT_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> eventDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.EVENT))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, eventDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.EXPLORATION_DECKS -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> exploreDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.EXPLORE))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, exploreDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.TECHNOLOGY_DECK -> {
-                String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                Map<String, DeckModel> decks = Mapper.getDecks();
-                List<Command.Choice> options = decks.values().stream()
+                List<DeckModel> techDecks = Mapper.getDecks().values().stream()
                     .filter(deckModel -> deckModel.getType().equals(Constants.TECHNOLOGY))
-                    .filter(value -> value.getAlias().contains(enteredValue))
-                    .map((deck) -> new Command.Choice(deck.getName(), deck.getAlias()))
-                    .limit(25)
-                    .collect(Collectors.toList());
+                    .toList();
+                List<Command.Choice> options = searchModels(event, techDecks, null);
                 event.replyChoices(options).queue();
             }
             case Constants.STRATEGY_CARD_SET -> {
@@ -743,7 +761,7 @@ public class AutoCompleteProvider {
             }
             case Constants.GAME_NAME -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<Command.Choice> options = GameManager.getInstance().getGameNames().stream()
+                List<Command.Choice> options = GameManager.getGameNames().stream()
                     .filter(token -> token.contains(enteredValue))
                     .limit(25)
                     .map(token -> new Command.Choice(token, token))
@@ -752,22 +770,22 @@ public class AutoCompleteProvider {
             }
             case Constants.GAME_STATISTIC -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<GameStatistics> stats = Arrays.asList(GameStatistics.values());
+                List<GameStatTypes> stats = Arrays.asList(GameStatTypes.values());
                 List<Command.Choice> options = stats.stream()
                     .filter(stat -> stat.search(enteredValue))
                     .limit(25)
-                    .sorted(Comparator.comparing(GameStatistics::getAutoCompleteName))
+                    .sorted(Comparator.comparing(GameStatTypes::getAutoCompleteName))
                     .map(stat -> new Command.Choice(stat.getAutoCompleteName(), stat.toString()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
             case Constants.PLAYER_STATISTIC -> {
                 String enteredValue = event.getFocusedOption().getValue();
-                List<PlayerStats.PlayerStatistics> stats = Arrays.asList(PlayerStats.PlayerStatistics.values());
+                List<PlayerStatTypes> stats = Arrays.asList(PlayerStatTypes.values());
                 List<Command.Choice> options = stats.stream()
                     .filter(stat -> stat.search(enteredValue))
                     .limit(25)
-                    .sorted(Comparator.comparing(PlayerStats.PlayerStatistics::getAutoCompleteName))
+                    .sorted(Comparator.comparing(PlayerStatTypes::getAutoCompleteName))
                     .map(stat -> new Command.Choice(stat.getAutoCompleteName(), stat.toString()))
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
@@ -811,7 +829,7 @@ public class AutoCompleteProvider {
                     .collect(Collectors.toList());
                 event.replyChoices(options).queue();
             }
-            case ForcePick.PICK -> {
+            case "draft_pick" -> {
                 String enteredValue = event.getFocusedOption().getValue();
                 if (game == null) {
                     event.replyChoices(Collections.emptyList()).queue();
@@ -868,219 +886,40 @@ public class AutoCompleteProvider {
         }
     }
 
-    private static void resolveDiscordantStarsCommandAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName) {
-        if (subCommandName.equals(Constants.SET_POLICY)) {
-            switch (optionName) {
-                case Constants.SET_PEOPLE -> {
-                    String enteredValue = event.getFocusedOption().getValue();
-                    List<Command.Choice> options = Stream.of("Connect", "Control", "+", "-")
-                        .filter(value -> value.contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value, value))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-                case Constants.SET_ENVIRONMENT -> {
-                    String enteredValue = event.getFocusedOption().getValue();
-                    List<Command.Choice> options = Stream.of("Preserve", "Plunder", "+", "-")
-                        .filter(value -> value.contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value, value))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-                case Constants.SET_ECONOMY -> {
-                    String enteredValue = event.getFocusedOption().getValue();
-                    List<Command.Choice> options = Stream.of("Empower", "Exploit", "+", "-")
-                        .filter(value -> value.contains(enteredValue))
-                        .limit(25)
-                        .map(value -> new Command.Choice(value, value))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-        }
+    private static <T extends ModelInterface & EmbeddableModel> List<Command.Choice> searchModels(CommandAutoCompleteInteractionEvent event, Collection<T> models, ComponentSource source) {
+        String enteredValue = event.getFocusedOption().getValue();
+        return models.stream()
+            .filter(model -> model.search(enteredValue, source))
+            .limit(25)
+            .map(model -> new Command.Choice(model.getAutoCompleteName(), model.getAlias()))
+            .collect(Collectors.toList());
     }
 
     private static void resolveSearchCommandAutoComplete(CommandAutoCompleteInteractionEvent event, String subCommandName, String optionName) {
         ComponentSource source = ComponentSource.fromString(event.getOption(Constants.SOURCE, null, OptionMapping::getAsString));
-        switch (subCommandName) {
-            case Constants.SEARCH_PLANETS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = TileHelper.getAllPlanets().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
+
+        if (optionName.equals(Constants.SEARCH)) {
+            List<Command.Choice> options = null;
+            switch (subCommandName) {
+                case Constants.SEARCH_PLANETS -> options = searchModels(event, TileHelper.getAllPlanetModels(), source);
+                case Constants.SEARCH_TILES -> options = searchModels(event, TileHelper.getAllTileModels(), source);
+                case Constants.SEARCH_FACTIONS -> options = searchModels(event, Mapper.getFactions(), source);
+                case Constants.SEARCH_LEADERS -> options = searchModels(event, Mapper.getLeaders().values(), source);
+                case Constants.SEARCH_UNITS -> options = searchModels(event, Mapper.getUnits().values(), source);
+                case Constants.SEARCH_TECHS -> options = searchModels(event, Mapper.getTechs().values(), source);
+                case Constants.SEARCH_ABILITIES -> options = searchModels(event, Mapper.getAbilities().values(), source);
+                case Constants.SEARCH_EXPLORES -> options = searchModels(event, Mapper.getExplores().values(), source);
+                case Constants.SEARCH_RELICS -> options = searchModels(event, Mapper.getRelics().values(), source);
+                case Constants.SEARCH_AGENDAS -> options = searchModels(event, Mapper.getAgendas().values(), source);
+                case Constants.SEARCH_EVENTS -> options = searchModels(event, Mapper.getEvents().values(), source);
+                case Constants.SEARCH_ACTION_CARDS -> options = searchModels(event, Mapper.getActionCards().values(), source);
+                case Constants.SEARCH_SECRET_OBJECTIVES -> options = searchModels(event, Mapper.getSecretObjectives().values(), source);
+                case Constants.SEARCH_PUBLIC_OBJECTIVES -> options = searchModels(event, Mapper.getPublicObjectives().values(), source);
+                case Constants.SEARCH_PROMISSORY_NOTES -> options = searchModels(event, Mapper.getPromissoryNotes().values(), source);
+                case Constants.SEARCH_DECKS -> options = searchModels(event, Mapper.getDecks().values(), source);
             }
-            case Constants.SEARCH_TILES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = TileHelper.getAllTiles().values().stream()
-                        .filter(value -> value.search(enteredValue, source))
-                        .limit(25)
-                        .map(value -> new Command.Choice("(" + value.getId() + ") " + value.getName(), value.getId()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_FACTIONS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getFactions().stream()
-                        .filter(entry -> entry.search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getAutoCompleteName(), entry.getAlias()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_LEADERS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getLeaders().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_UNITS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getUnits().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_TECHS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getTechs().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_ABILITIES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getAbilities().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_EXPLORES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getExplores().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_RELICS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getRelics().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_AGENDAS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getAgendas().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_EVENTS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getEvents().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_ACTION_CARDS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getActionCards().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_SECRET_OBJECTIVES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getSecretObjectives().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_PUBLIC_OBJECTIVES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getPublicObjectives().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_PROMISSORY_NOTES -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getPromissoryNotes().entrySet().stream()
-                        .filter(entry -> !entry.getValue().isDupe())
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
-            }
-            case Constants.SEARCH_DECKS -> {
-                if (optionName.equals(Constants.SEARCH)) {
-                    String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = Mapper.getDecks().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue, source))
-                        .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                        .collect(Collectors.toList());
-                    event.replyChoices(options).queue();
-                }
+            if (options != null) {
+                event.replyChoices(options).queue();
             }
         }
     }
@@ -1091,12 +930,11 @@ public class AutoCompleteProvider {
                 switch (optionName) {
                     case Constants.TECH, Constants.TECH2, Constants.TECH3, Constants.TECH4 -> {
                         String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                        Map<String, TechnologyModel> techs = new HashMap<>(Mapper.getTechs());
-                        List<Command.Choice> options = techs.entrySet().stream()
-                            .filter(entry -> entry.getValue().getFaction().isPresent())
-                            .filter(entry -> entry.getValue().search(enteredValue))
+                        List<Command.Choice> options = Mapper.getTechs().values().stream()
+                            .filter(entry -> entry.getFaction().isPresent())
+                            .filter(entry -> entry.search(enteredValue))
                             .limit(25)
-                            .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
+                            .map(entry -> new Command.Choice(entry.getAutoCompleteName(), entry.getAlias()))
                             .collect(Collectors.toList());
                         event.replyChoices(options).queue();
                     }
@@ -1105,13 +943,7 @@ public class AutoCompleteProvider {
             case Constants.LEADER_ADD, Constants.LEADER_REMOVE -> {
                 switch (optionName) {
                     case Constants.LEADER, Constants.LEADER_1, Constants.LEADER_2, Constants.LEADER_3, Constants.LEADER_4 -> {
-                        String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                        Map<String, LeaderModel> techs = new HashMap<>(Mapper.getLeaders());
-                        List<Command.Choice> options = techs.entrySet().stream()
-                            .filter(entry -> entry.getValue().search(enteredValue))
-                            .limit(25)
-                            .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                            .collect(Collectors.toList());
+                        List<Command.Choice> options = searchModels(event, Mapper.getLeaders().values(), null);
                         event.replyChoices(options).queue();
                     }
                 }
@@ -1129,21 +961,12 @@ public class AutoCompleteProvider {
             case Constants.ADD_TILE -> {
                 if (optionName.equals(Constants.TILE_NAME)) {
                     String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    List<Command.Choice> options = TileHelper.getAllTiles().entrySet().stream()
-                        .filter(entry -> entry.getValue().search(enteredValue))
+                    List<Command.Choice> options = TileHelper.getAllTileModels().stream()
+                        .filter(tileModel -> tileModel.search(enteredValue))
                         .limit(25)
-                        .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
+                        .map(tileModel -> new Command.Choice(tileModel.getAutoCompleteName(), tileModel.getId()))
                         .collect(Collectors.toList());
                     event.replyChoices(options).queue();
-                    // case Constants.POSITION -> {
-                    //     String enteredValue = event.getFocusedOption().getValue().toLowerCase();
-                    //     List<Command.Choice> options = game.getTileMap().entrySet().stream()
-                    //         .filter(entry -> entry.getValue().search(enteredValue))
-                    //         .limit(25)
-                    //         .map(entry -> new Command.Choice(entry.getValue().getAutoCompleteName(), entry.getKey()))
-                    //         .collect(Collectors.toList());
-                    //     event.replyChoices(options).queue();
-                    // }
                 }
             }
             case Constants.REMOVE_TILE -> {
