@@ -3,6 +3,7 @@ package ti4.commands.game;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
 import net.dv8tion.jda.api.entities.Member;
 import net.dv8tion.jda.api.entities.channel.concrete.TextChannel;
 import net.dv8tion.jda.api.entities.channel.concrete.ThreadChannel;
@@ -20,6 +21,8 @@ import ti4.message.MessageHelper;
 
 public class GameCreate extends GameSubcommandData {
 
+    private static final Pattern ALPHANUMERIC_PATTERN = Pattern.compile("^[a-zA-Z0-9]+$");
+
     public GameCreate() {
         super(Constants.CREATE_GAME, "Create a new game");
         addOptions(new OptionData(OptionType.STRING, Constants.GAME_NAME, "Game name").setRequired(true));
@@ -27,17 +30,15 @@ public class GameCreate extends GameSubcommandData {
 
     @Override
     public void execute(SlashCommandInteractionEvent event) {
-        String mapName = event.getOptions().get(0).getAsString().toLowerCase();
+        String mapName = event.getOptions().getFirst().getAsString().toLowerCase();
         Member member = event.getMember();
 
-        String regex = "^[a-zA-Z0-9]+$";
-        Pattern pattern = Pattern.compile(regex);
-        Matcher matcher = pattern.matcher(mapName);
+        Matcher matcher = ALPHANUMERIC_PATTERN.matcher(mapName);
         if (!matcher.matches()) {
             MessageHelper.replyToMessage(event, "Game name can only contain a-z 0-9 symbols");
             return;
         }
-        if (GameManager.getInstance().getGameNameToGame().containsKey(mapName)) {
+        if (GameManager.getGameNameToGame().containsKey(mapName)) {
             MessageHelper.replyToMessage(event, "Game with such name exist already, choose different name");
             return;
         }
@@ -59,14 +60,13 @@ public class GameCreate extends GameSubcommandData {
         newGame.setName(gameName);
         newGame.setAutoPing(true);
         newGame.setAutoPingSpacer(24);
-        GameManager gameManager = GameManager.getInstance();
-        gameManager.addGame(newGame);
-        boolean setMapSuccessful = gameManager.setGameForUser(ownerID, gameName);
+        GameManager.addGame(newGame);
+        boolean setMapSuccessful = GameManager.setGameForUser(ownerID, gameName);
         newGame.addPlayer(gameOwner.getId(), gameOwner.getEffectiveName());
         if (!setMapSuccessful) {
             MessageHelper.replyToMessage(event, "Could not assign active Game " + gameName);
         }
-        GameSaveLoadManager.saveMap(newGame, event);
+        GameSaveLoadManager.saveGame(newGame, event);
         return newGame;
     }
 
