@@ -4,13 +4,17 @@ import java.util.ArrayList;
 import java.util.List;
 
 import com.fasterxml.jackson.annotation.JsonIgnore;
-import ti4.commands.milty.MiltyDraftManager;
-import ti4.commands.milty.MiltyDraftTile;
+import ti4.commands2.milty.MiltyDraftManager;
+import ti4.commands2.milty.MiltyDraftTile;
 import ti4.draft.DraftItem;
-import ti4.generator.Mapper;
-import ti4.generator.TileHelper;
+import ti4.image.Mapper;
+import ti4.image.TileHelper;
 import ti4.helpers.Emojis;
-import ti4.model.*;
+import ti4.model.DraftErrataModel;
+import ti4.model.PlanetModel;
+import ti4.model.PlanetTypeModel;
+import ti4.model.TechSpecialtyModel;
+import ti4.model.TileModel;
 
 public class BlueTileDraftItem extends DraftItem {
     public BlueTileDraftItem(String itemId) {
@@ -20,13 +24,13 @@ public class BlueTileDraftItem extends DraftItem {
     @JsonIgnore
     @Override
     public String getShortDescription() {
-        return TileHelper.getTile(ItemId).getName() + " (" + ItemId + ")";
+        return TileHelper.getTileById(ItemId).getName() + " (" + ItemId + ")";
     }
 
     @JsonIgnore
     @Override
     public String getLongDescriptionImpl() {
-        TileModel tile = TileHelper.getTile(ItemId);
+        TileModel tile = TileHelper.getTileById(ItemId);
         StringBuilder sb = new StringBuilder();
         List<String> planetIds = tile.getPlanets();
         for (int i = 0; i < planetIds.size() - 1; i++) {
@@ -34,7 +38,7 @@ public class BlueTileDraftItem extends DraftItem {
             sb.append(", ");
         }
 
-        buildPlanetString(Mapper.getPlanet(planetIds.get(planetIds.size() - 1)), sb);
+        buildPlanetString(Mapper.getPlanet(planetIds.getLast()), sb);
 
         return sb.toString();
     }
@@ -83,7 +87,7 @@ public class BlueTileDraftItem extends DraftItem {
     public static List<DraftItem> buildAllDraftableItems(MiltyDraftManager draftManager) {
         List<DraftItem> allItems = new ArrayList<>();
         for (MiltyDraftTile tile : draftManager.getBlue()) {
-            allItems.add(DraftItem.Generate(DraftItem.Category.BLUETILE, tile.getTile().getTileID()));
+            allItems.add(DraftItem.generate(DraftItem.Category.BLUETILE, tile.getTile().getTileID()));
         }
         DraftErrataModel.filterUndraftablesAndShuffle(allItems, DraftItem.Category.BLUETILE);
         return allItems;
