@@ -2,16 +2,17 @@ package ti4.helpers;
 
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import org.apache.commons.lang3.StringUtils;
-
-import ti4.generator.Mapper;
 import ti4.helpers.Units.UnitType;
+import ti4.image.Mapper;
 import ti4.map.Game;
 import ti4.map.Leader;
 import ti4.map.Player;
@@ -25,6 +26,7 @@ import ti4.model.RelicModel;
 import ti4.model.TechnologyModel;
 import ti4.model.TileModel;
 import ti4.model.UnitModel;
+import ti4.service.combat.CombatRollType;
 
 public class CombatModHelper {
 
@@ -38,7 +40,7 @@ public class CombatModHelper {
         return false;
     }
 
-    public static List<NamedCombatModifierModel> GetModifiers(Player player, Player opponent,
+    public static List<NamedCombatModifierModel> getModifiers(Player player, Player opponent,
         Map<UnitModel, Integer> unitsByQuantity,
         TileModel tile,
         Game game,
@@ -167,14 +169,15 @@ public class CombatModHelper {
             if (checkModPassesCondition(relevantMod, tile, player, opponent, unitsByQuantity,
                 game)) {
                 modifiers.add(
-                    new NamedCombatModifierModel(relevantMod, relevantMod.getRelated().get(0).getMessage()));
+                    new NamedCombatModifierModel(relevantMod, relevantMod.getRelated().getFirst().getMessage()));
             }
         }
+        Set<NamedCombatModifierModel> set = new HashSet<>(modifiers);
 
-        return modifiers;
+        return new ArrayList<>(set);
     }
 
-    public static Integer GetCombinedModifierForUnit(UnitModel unit, Integer numOfUnit,
+    public static Integer getCombinedModifierForUnit(UnitModel unit, Integer numOfUnit,
         List<NamedCombatModifierModel> modifiers, Player player,
         Player opponent, Game game, List<UnitModel> playerUnits, List<UnitModel> opponentUnits,
         CombatRollType rollType, Tile tile) {
@@ -182,7 +185,7 @@ public class CombatModHelper {
         for (NamedCombatModifierModel namedModifier : modifiers) {
             CombatModifierModel modifier = namedModifier.getModifier();
             if (modifier.isInScopeForUnit(unit, playerUnits, rollType, game, player)) {
-                Integer modValue = GetVariableModValue(modifier, player, opponent, game, opponentUnits, unit, tile);
+                Integer modValue = getVariableModValue(modifier, player, opponent, game, opponentUnits, unit, tile);
                 Integer perUnitCount = 1;
                 if (modifier.getApplyEachForQuantity()) {
                     perUnitCount = numOfUnit;
@@ -220,7 +223,7 @@ public class CombatModHelper {
             }
             case Constants.MOD_OPPONENT_FRAG -> {
                 if (opponent != null) {
-                    meetsCondition = opponent.getFragments().size() > 0;
+                    meetsCondition = !opponent.getFragments().isEmpty();
                 }
             }
             case Constants.MOD_OPPONENT_STOLEN_TECH -> {
@@ -260,12 +263,37 @@ public class CombatModHelper {
             }
             case Constants.MOD_HAS_FRAGILE -> meetsCondition = player.getAbilities().contains("fragile");
             case Constants.MOD_OPPONENT_NO_CC_FLEET -> meetsCondition = !player.getMahactCC().contains(opponent.getColor());
-            case "next_to_structure" -> meetsCondition = (ButtonHelperAgents.getAdjacentTilesWithStructuresInThem(player, game, tile).size() > 0 || ButtonHelperAgents.doesTileHaveAStructureInIt(player, tile));
+            case "next_to_structure" -> meetsCondition = (!ButtonHelperAgents.getAdjacentTilesWithStructuresInThem(player, game, tile).isEmpty() || ButtonHelperAgents.doesTileHaveAStructureInIt(player, tile));
             case Constants.MOD_UNITS_TWO_MATCHING_NOT_FF -> {
+                meetsCondition = false;
                 if (unitsByQuantity.entrySet().size() == 1) {
-                    Entry<UnitModel, Integer> unitByQuantity = new ArrayList<>(unitsByQuantity.entrySet()).get(0);
+                    Entry<UnitModel, Integer> unitByQuantity = new ArrayList<>(unitsByQuantity.entrySet()).getFirst();
                     meetsCondition = unitByQuantity.getValue() == 2
                         && !"ff".equals(unitByQuantity.getKey().getAsyncId());
+                }
+                if (unitsByQuantity.entrySet().size() == 2) {
+                    Entry<UnitModel, Integer> unitByQuantity = new ArrayList<>(unitsByQuantity.entrySet()).get(0);
+                    Entry<UnitModel, Integer> unitByQuantity2 = new ArrayList<>(unitsByQuantity.entrySet()).get(1);
+                    String baseType1 = unitByQuantity.getKey().getBaseType();
+                    String baseType2 = unitByQuantity2.getKey().getBaseType();
+                    if (baseType1.equalsIgnoreCase("fighter") || baseType2.equalsIgnoreCase("fighter")) {
+                        if (baseType1.equalsIgnoreCase("fighter")) {
+                            meetsCondition = unitByQuantity.getValue() == 2;
+                        } else {
+                            meetsCondition = unitByQuantity2.getValue() == 2;
+                        }
+                    } else if (baseType1.equalsIgnoreCase("flagship") && baseType2.equalsIgnoreCase("flagship")) {
+                        meetsCondition = true;
+                    }
+                }
+                if (unitsByQuantity.entrySet().size() == 3) {
+                    List<Entry<UnitModel, Integer>> entries = new ArrayList<>(unitsByQuantity.entrySet());
+                    meetsCondition = entries.stream()
+                        .limit(3)
+                        .allMatch(entry -> {
+                            String baseType = entry.getKey().getBaseType();
+                            return baseType.equalsIgnoreCase("fighter") || baseType.equalsIgnoreCase("flagship");
+                        });
                 }
             }
             case Constants.MOD_NEBULA_DEFENDER -> {
@@ -347,16 +375,16 @@ public class CombatModHelper {
     /// like how many fragments you have
     /// or how many POs the opponent has scored that you haven't etc.
     ///
-    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent,
+    public static Integer getVariableModValue(CombatModifierModel mod, Player player, Player opponent,
         Game game, List<UnitModel> opponentUnitsInCombat, UnitModel origUnit) {
-        return GetVariableModValue(mod, player, opponent, game, opponentUnitsInCombat, origUnit, null);
+        return getVariableModValue(mod, player, opponent, game, opponentUnitsInCombat, origUnit, null);
     }
 
-    public static Integer GetVariableModValue(CombatModifierModel mod, Player player, Player opponent,
+    public static Integer getVariableModValue(CombatModifierModel mod, Player player, Player opponent,
         Game game, List<UnitModel> opponentUnitsInCombat, UnitModel origUnit, Tile activeSystem) {
         double value = mod.getValue().doubleValue();
         double multiplier = 1.0;
-        Long scalingCount = (long) 0;
+        long scalingCount = 0;
         if (mod.getValueScalingMultiplier() != null) {
             multiplier = mod.getValueScalingMultiplier();
         }
@@ -376,7 +404,7 @@ public class CombatModHelper {
                         scalingCount += 1;
                     }
                 }
-                case Constants.LAW -> scalingCount = (long) game.getLaws().size();
+                case Constants.LAW -> scalingCount = game.getLaws().size();
                 case Constants.MOD_OPPONENT_PO_EXCLUSIVE_SCORED -> {
                     if (opponent != null) {
                         var customPublicVPList = game.getCustomPublicVP();
@@ -398,7 +426,7 @@ public class CombatModHelper {
                     .filter(TechnologyModel::isUnitUpgrade)
                     .count();
                 case Constants.MOD_DESTROYERS -> {
-                    scalingCount = (long) ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "destroyer", false);
+                    scalingCount = ButtonHelper.getNumberOfUnitsOnTheBoard(game, player, "destroyer", false);
                 }
                 case Constants.MOD_OPPONENT_NON_FIGHTER_SHIP -> {
                     scalingCount += ButtonHelper.checkNumberNonFighterShips(opponent, game, activeSystem);
@@ -424,6 +452,14 @@ public class CombatModHelper {
                 case "damaged_units_same_type" -> {
                     UnitHolder space = activeSystem.getUnitHolders()
                         .get("space");
+                    if (origUnit.getIsGroundForce() && !activeSystem.getPlanetUnitHolders().isEmpty()) {
+                        for (UnitHolder planet : activeSystem.getPlanetUnitHolders()) {
+                            if (planet.getUnitCount(Mapper.getUnitKey(AliasHandler.resolveUnit(origUnit.getBaseType()), player.getColorID()).getUnitType(), player) > 0) {
+                                space = planet;
+                            }
+                        }
+
+                    }
                     int count = 0;
                     if (space.getUnitDamage().get(Mapper.getUnitKey(AliasHandler.resolveUnit(origUnit.getBaseType()),
                         player.getColorID())) != null) {
@@ -452,7 +488,7 @@ public class CombatModHelper {
                 default -> {
                 }
             }
-            value = value * multiplier * scalingCount.doubleValue();
+            value = value * multiplier * (double) scalingCount;
         }
         value = Math.floor(value); // to make sure eg +1 per 2 destroyer doesn't return 2.5 etc
         return (int) value;
