@@ -4,11 +4,12 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Objects;
+
 import lombok.Data;
 import org.apache.commons.lang3.StringUtils;
-import ti4.helpers.CombatRollType;
 import ti4.map.Game;
 import ti4.map.Player;
+import ti4.service.combat.CombatRollType;
 
 @Data
 public class CombatModifierModel implements ModelInterface {
@@ -53,12 +54,14 @@ public class CombatModifierModel implements ModelInterface {
             }
             if ("_best_".equals(scope)) {
                 List<UnitModel> sortedAllUnits = new ArrayList<>(allUnits);
-                sortedAllUnits.sort(
-                    Comparator.comparingInt(a -> a.getCombatDieHitsOnForAbility(rollType, player, game)));
-                isInScope = Objects.equals(sortedAllUnits.get(0).getAsyncId(), unit.getAsyncId());
+                sortedAllUnits.sort(Comparator.comparingInt(a -> a.getCombatDieHitsOnForAbility(rollType, player, game)));
+                isInScope = Objects.equals(sortedAllUnits.getFirst().getAsyncId(), unit.getAsyncId());
             }
             if ("_ship_".equals(scope)) {
                 isInScope = unit.getIsShip();
+            }
+            if ("_ship_no_ff".equals(scope)) {
+                isInScope = unit.getIsShip() && !unit.getBaseType().equalsIgnoreCase("fighter");
             }
             if ("_groundforce_".equals(scope)) {
                 isInScope = unit.getIsGroundForce();
